# Almag_RetDriverSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  runBinary.sh  runMT.sh  runPrepareForUbuntu.sh  runUT.sh
docs/: UML_DiagramOfClasses.vsdx  UML_DiagramOfSequence.wsd
src/: CMakeLists.txt  main.cpp
src/CommandPattern/: AlmagController.cpp  AlmagController.hpp  AlmagControllerNull.cpp  AlmagControllerNull.hpp  IAlmagController.hpp  ICommand.cpp  ICommand.hpp  ICommandFacade.hpp  ICommandFactory.hpp  IController.hpp  IHDLCFrameBodyFactory.hpp  IHDLCReqFrameBodyFactory.hpp
src/CommandPattern/Commands/: AISGProtocolVersion.cpp  AISGProtocolVersion.hpp  AddressAssignment.cpp  AddressAssignment.hpp  Calibrate.cpp  Calibrate.hpp  DeviceScan.cpp  DeviceScan.hpp  DummyScan.cpp  DummyScan.hpp  HDLCCommand.cpp  HDLCCommand.hpp  HDLCFrameBodyFactory.hpp  HDLCParameters.cpp  HDLCParameters.hpp  ICommand.cpp  ICommand.hpp  LinkEstablishment.cpp  LinkEstablishment.hpp  StartPooling.cpp  StartPooling.hpp  ThreeGPPReleaseID.cpp  ThreeGPPReleaseID.hpp
src/Database/: Database.cpp  Database.hpp
src/Database/Objects/: IOPaths.cpp  IOPaths.hpp
src/Database/Utils/: KeyWithValue.hpp
src/HDLC/: FrameBase.cpp  FrameBase.hpp  HDLCCommunicator.cpp  HDLCCommunicator.hpp  HDLCFrame.cpp  HDLCFrame.hpp  HDLCFrameBody.cpp  HDLCFrameBody.hpp  HDLCFrameBodyInterpreter.cpp  HDLCFrameBodyInterpreter.hpp  HDLCFrameInterpreter.cpp  HDLCFrameInterpreter.hpp  HDLCParameters.cpp  HDLCParameters.hpp  HDLCParametersValues.cpp  HDLCParametersValues.hpp  HDLCReqFrameBodyFactory.cpp  HDLCReqFrameBodyFactory.hpp  HDLCRespFrameBodyFactory.cpp  HDLCRespFrameBodyFactory.hpp  IHDLCCommunicator.hpp  MessagesHelpers.cpp  MessagesHelpers.hpp
src/HDLC/ConcreteFrames/: FrameSNRM.cpp  FrameSNRM.hpp  FrameUA.cpp  FrameUA.hpp
src/HDLC/FrameTypes/: FrameI.cpp  FrameI.hpp  FrameSNRM.cpp  FrameSNRM.hpp  FrameU.cpp  FrameU.hpp  FrameXID.cpp  FrameXID.hpp
src/PluginCommandConstraints/: AlmagConstraints.hpp  DatabaseConstraints.hpp
src/PluginConstraints/: DatabaseConstraints.hpp
src/PluginSpecifics/: HDLCReqFrameBodyFactory.cpp  HDLCReqFrameBodyFactory.hpp  RetDriverCommandFacade.cpp  RetDriverCommandFacade.hpp  RetDriverCommandFactory.cpp  RetDriverCommandFactory.hpp
src/PluginSpecifics/CmdConstraints/: AlmagConstraints.hpp  KorytkoMagConstraints.hpp
src/PluginSpecifics/UICmdValidators/: AlmagCommandValidationManager.cpp  AlmagCommandValidationManager.hpp
src/UserInterface/: CMenu.cpp  CMenu.hpp
src/Utils/: Logger.cpp  TypeAliases.hpp  UserCommandParser.cpp  UserCommandParser.hpp  Utils.cpp  Utils.hpp
test/: CMakeLists.txt  main.cpp
test/Fixtures/: BaseFixtureWithDB.cpp  BaseFixtureWithDBAndHDLC.cpp  BaseFixtureWithDBAndHDLC.hpp
test/MT/: AlmagControllerTest.cpp  CMakeLists.txt  KorytkoMagControllerTest.cpp  UIAndControllerIntegrationTestsHappyPath.cpp  UIAndControllerIntegrationTestsSadPath.cpp  UI_Controller_RoundTripHDLC.cpp  UI_Controller_ZeroMqHDLC.cpp
test/MT/UIAndDBIntegration/: UIAndDBIntegrationTests.cpp
test/TestUtils/: HDLCCommunicator.cpp  HDLCCommunicator.hpp  Hardcodes.hpp  MatcherUtils.cpp  RoundTripHDLCCommunicatorStub.cpp  RoundTripHDLCCommunicatorStub.hpp  StructsForParametrizedTests.hpp
test/TestUtils/HDLC/DataLinkLayerCommunicators/: RoundTripHDLCCommunicatorStub.cpp  RoundTripHDLCCommunicatorStub.hpp  ZMqCommunicator.hpp  ZMqPubSubCommunicator.cpp  ZMqPubSubCommunicator.hpp  ZMqReqRespCommunicator.cpp  ZMqReqRespCommunicator.hpp
test/TestUtils/HDLC/FramesFactories/: FrameHexFactory.hpp  FrameStrFactory.hpp  SRetFrameBodyHexFactory.cpp  SRetFrameBodyHexFactory.hpp  SRetFrameBodyStrFactory.cpp  SRetFrameBodyStrFactory.hpp  SRetHDLCFrameBodyHexFactory.cpp  SRetHDLCFrameBodyHexFactory.hpp  SRetHDLCFrameBodyStrFactory.cpp  SRetHDLCFrameBodyStrFactory.hpp  SRetHDLCFrameStrFactory.cpp  SRetHDLCFrameStrFactory.hpp  SRetHDLCReqFrameBodyStrFactory.cpp  SRetHDLCReqFrameBodyStrFactory.hpp  SRetHDLCRespFrameBodyStrFactory.cpp  SRetHDLCRespFrameBodyStrFactory.hpp
test/TestUtils/HDLCCommunicators/: RoundTripHDLCCommunicatorStub.cpp  RoundTripHDLCCommunicatorStub.hpp  ZMqCommunicator.hpp  ZMqPubSubCommunicator.cpp  ZMqPubSubCommunicator.hpp  ZMqReqRespCommunicator.cpp  ZMqReqRespCommunicator.hpp  ZeroMqHDLCCommunicator.cpp  ZeroMqHDLCCommunicator.hpp  ZeroMqUtils.cpp  ZeroMqUtils.hpp
test/UT/: CMakeLists.txt
test/UT/Communication/: ZMqReqRespCommunicatorTests.cpp  ZmqReqRespCommunicatorTests.cpp
test/UT/DB/: DBTests.cpp
test/UT/HDLC/: CRC16Tests.cpp  HDLCFrameBodyTests.cpp  HDLCFrameInterpreterTests.cpp  HDLCFrameTests.cpp  HDLCReqFrameBodyInterpreterTests.cpp  HDLCReqFrameBodyTests.cpp  HDLCReqFrameInterpreterTests.cpp  HDLCRespFrameBodyTests.cpp
test/UT/Utils/: UserCommandParserTest.cpp
